# UBiasCV

./: .gitignore  README.md  bias-strategy-fix-guide.html  omission_penalty_2.py  omission_rba.py  vercel.json
.github/workflows/: black.yml  python-app.yml
backend/: app.py  main.py  pyproject.toml  requirements.txt
backend/BiasAI/: claude.py  claude_output_template.json  controller.py  extract.py  main.py  models.py  service.py  ubiasai.py
backend/BiasRuleAlgo/: main.py  rba.py  strategy_base.py  thing.json
backend/BiasRuleAlgo/strategies/: actionability_classifier.py  career_gap.py  hidden_ceiling.py  lexicon_checker.py  omission_penalty.py
backend/StrategyTesting/: rba_tester.py
backend/StrategyTesting/SampleCVFeedback/: test1female_feedback.txt  test1male_feedback.txt
backend/tests/: test_actionability_classifier.py  test_career_gap.py  test_hidden_ceiling.py  test_integration_hidden_ceiling.py  test_lexicon_checker.py  test_omission_penalty.py  test_tailoring_context.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: FileUpload.tsx  Footer.tsx  Header.tsx  InputDataPage.tsx  IntroPage.tsx  MainPage.tsx  Page.tsx  PrivacyPolicyPage.tsx  ResultsPage.tsx  ReviewPage.tsx
