[project]
name = "ubiasai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "anthropic",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "pypdf",
    "python-docx",
    "pymupdf",
]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true